feat: done basic
